fixed redirects and default avatar

--- a/src/login/login-page.html
+++ b/src/login/login-page.html
@@ -97,7 +97,7 @@
         if (this.$.loginForm.validate()) {
           this.$.auth.signInWithEmailAndPassword(this.email, this.password)
           .then(function() {
-            window.location = '/home';
+            loginPage.domHost.page = 'home';
           }, function(error) {
             console.log('second');
             loginPage.hideErrorMessage = false;
